--- a/.env.sample
+++ b/.env.sample
@@ -6,5 +6,6 @@ REACT_APP_SCOPE="openid profile email"
 REACT_APP_USERINFO_ENDPOINT="https://my-domain.com/userinfo"
 
 HOST="172.1.1.1"
+HTTPS="true"
 REACT_APP_REDIRECT_URI="https://172.1.1.1:3000/redirect"
 
